--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,8 @@
                     <p class="text-[9px] font-black text-slate-500 uppercase tracking-widest">Developed By</p>
                     <p class="text-sm font-bold">Farell Rhezky <span class="text-blue-500">20125328</span></p>
                     <p class="text-sm font-bold">Dicky Asqaelani <span class="text-blue-500">20125258</span></p>
+                    <p class="text-[9px] mt-2 font-black text-slate-500 uppercase tracking-widest">Asissted By</p>
+                    <p class="text-sm font-bold">Gemini <span class="text-blue-500">A.i</span></p>
                 </div>
             </div>
             <div class="text-right">
